# Zen

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODING.md  Doxyfile  GenerateProjectFiles.bat  LICENSE  README.md  _assert_8hpp_source.html  _enviroment_8hpp_source.html  _main_8hpp_source.html  _platform_define_8hpp_source.html  _vector3_8hpp_source.html  _vector4_8hpp_source.html  _xx_hash_8hpp_source.html  annotated.html  classes.html  classstd_1_1span.html  dir_110e65fa4ea2bba119c0d319368875b8.html  dir_11122dc353e560705030d615e82b2b98.html  dir_1d2190eed643aefa2cf4a3dfc04e39f8.html  dir_1f3d831989b2adf7f6dc706d134184fc.html  dir_266022eb4a8b9fef84a8f45680265fe7.html  dir_2ccfee0d3eab1ac1d2ed79e50cd3527d.html  dir_360ba6e560095474f2116d3cddc8d7c8.html  dir_66be998ec71f0e8b33f8cc78a6a2aa2f.html  dir_67cf7fa129d78b30e1dad6c13ccacdae.html  dir_6f9ef64acb9f4b4005df859b77418d7a.html  dir_89f35f8382c989b18203f657a58732ba.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  dir_962f4b3fad486f2b97c6afaa92bdbb8c.html  dir_994fef7c0932fcfe306300c8dd0cc8a7.html  dir_b9be27c58bb9cc364feabfda5ecd091a.html  dir_c8a86b55703d6bf8b8ba06b336b10e31.html  dir_cda5ad063a29f4b7f1186068f0407cf0.html  dir_d475fecae7be924407c8aee9d70d3103.html  dir_e57bbb2780f99c5bf7586beba99594a3.html  files.html  functions.html  (+7 more)
.github/workflows/: codeql-analysis.yml  doxygen.yml  linux.yml  windows.yml
BuildTools/: BuildEngine.ps1
BuildTools/Modules/: ZenBuildUtility.cmake
Sources/: CMakeLists.txt
Sources/Engine/: CMakeLists.txt
Sources/Engine/Core/: CMakeLists.txt
Sources/Engine/Core/Private/Containers/: String.cpp
Sources/Engine/Core/Private/Hash/: XxHash.cpp
Sources/Engine/Core/Private/Misc/: Enviroment.cpp
Sources/Engine/Core/Public/Core/Containers/: Array.hpp  Span.hpp  String.hpp  StringView.hpp
Sources/Engine/Core/Public/Core/Containers/Detail/: StringHelper.hpp
Sources/Engine/Core/Public/Core/Hash/: XxHash.hpp
Sources/Engine/Core/Public/Core/Logger/: LogOutput.hpp  Logger.hpp
Sources/Engine/Core/Public/Core/Memory/: AllocatorTraits.hpp  Memory.hpp  MemoryUtils.hpp  PointerTraits.hpp  SharedPtr.hpp  UniquePtr.hpp
Sources/Engine/Core/Public/Core/Misc/: Assert.hpp  EnumUtility.hpp  Enviroment.hpp  ScopeExit.hpp
Sources/Engine/Core/Public/Core/Platform/: PlatformDefine.hpp
Sources/Engine/Core/Tests/: CMakeLists.txt
Sources/Engine/Core/Tests/Containers/: ArrayTest.cpp  StringTest.cpp  StringViewTest.cpp
Sources/Engine/Core/Tests/Memory/: SharedPtrTest.cpp  UniquePtrTest.cpp
Sources/Engine/Core/Tests/Span/: SpanTest.cpp
Sources/Engine/Launch/: CMakeLists.txt
Sources/Engine/Launch/Private/: Main.cpp  Main.hpp
Sources/Engine/Launch/Private/Linux/: Launch_Linux.cpp
Sources/Engine/Launch/Private/Windows/: Launch_Windows.cpp
Sources/Engine/Math/: CMakeLists.txt
Sources/Engine/Math/Private/: Math.cpp
Sources/Engine/Math/Public/Math/: Math.hpp  Vector3.hpp  Vector4.hpp
Sources/Engine/Math/Tests/: CMakeLists.txt  MathTestHelper.h  MathTestHelper.hpp  Vector3Test.cpp  Vector4Test.cpp
Sources/Engine/Rhi/: CMakeLists.txt
Sources/Engine/Rhi/Private/: DxgiUtility.cpp  DxgiUtility.hpp  HandlePool.hpp  RefCountPtr.hpp
Sources/Engine/Rhi/Private/Dx12/: BufferDx12.cpp  BufferDx12.hpp  DeviceDx12.cpp  DeviceDx12.hpp  RenderPassDx12.cpp  RenderPassDx12.hpp  SwapChainDx12.hpp  TextureDx12.cpp  TextureDx12.hpp
Sources/Engine/Rhi/Public/Rhi/: Handle.hpp  Rhi.hpp
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js
